# arknet

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  clippy.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  pages.yml  release.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/arknet/: __init__.py  client.py
bindings/python/arknet_sdk/: __init__.py  client.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_client.py
bindings/typescript/: package-lock.json  package.json  tsconfig.json
bindings/typescript/src/: index.ts
bindings/typescript/tests/: client.test.mjs
crates/chain/: Cargo.toml
crates/chain/fixtures/: devnet-genesis.toml
crates/chain/src/: account.rs  apply.rs  block.rs  bootstrap.rs  circuit_breaker.rs  da.rs  errors.rs  escrow_entry.rs  fee_market.rs  gateway_entry.rs  genesis.rs  governance_entry.rs  lib.rs  pending_reward.rs  receipt.rs  stake_apply.rs  stake_entry.rs  state.rs  transactions.rs  unbonding.rs  validator.rs
crates/chain/tests/: primitives.rs  state_apply.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  errors.rs  lib.rs  serialization.rs  types.rs
crates/compute/: Cargo.toml
crates/compute/src/: attestation.rs  errors.rs  free_tier.rs  job.rs  lib.rs  wire.rs
crates/compute/tests/: engine_pipeline.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: block_builder.rs  commit.rs  context.rs  engine.rs  errors.rs  height.rs  lib.rs  mempool.rs  network_bridge.rs  proposal.rs  signing.rs  validators.rs  value.rs  vote.rs
crates/consensus/tests/: four_node_bft.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  errors.rs  hash.rs  kdf.rs  keys.rs  lib.rs  merkle.rs  signatures.rs  threshold.rs  vrf.rs
crates/governance/: Cargo.toml
crates/governance/src/: errors.rs  lib.rs  proposals.rs
crates/inference/: Cargo.toml  build.rs
crates/inference/src/: backend.rs  checkpoint.rs  config.rs  context.rs  engine.rs  errors.rs  events.rs  lib.rs  model.rs  sampling.rs  session.rs  tokenizer.rs
crates/inference/src/sys/: mod.rs
crates/inference/tests/: determinism.rs  engine_async.rs  smoke.rs
crates/light-client/: Cargo.toml
crates/light-client/src/: lib.rs
crates/model-manager/: Cargo.toml
crates/model-manager/fixtures/: genesis-registry.toml
crates/model-manager/src/: cache.rs  errors.rs  genesis.rs  gguf.rs  lib.rs  manager.rs  puller.rs  registry.rs  sandbox.rs  types.rs
crates/model-manager/tests/: integration.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  config.rs  errors.rs  gossip.rs  handshake.rs  inference_proto.rs  lib.rs  network.rs  peer.rs
crates/network/tests/: cluster.rs  inference_proto.rs
crates/node/: Cargo.toml
crates/node/src/: compute_role.rs  errors.rs  hardware.rs  l2_dispatch.rs  logging.rs  main.rs  metrics.rs  network_boot.rs  paths.rs  router_role.rs  rpc.rs  scheduler.rs  validator.rs  verifier_role.rs
crates/node/src/cli/: config_cmd.rs  gateway.rs  governance.rs  health.rs  init.rs  mod.rs  model_cmd.rs  start.rs  status.rs  tee.rs  wallet.rs
crates/node/src/runtime/: mod.rs  shutdown.rs
crates/node/tests/: end_to_end.rs  l2_roundtrip.rs
crates/payments/: Cargo.toml
crates/payments/src/: emission.rs  errors.rs  escrow.rs  lib.rs  pricing.rs  rewards.rs
crates/payments/tests/: economic_flow.rs
crates/receipts/: Cargo.toml
crates/receipts/src/: anchor.rs  batch.rs  errors.rs  lib.rs
crates/receipts/tests/: anchor_pipeline.rs
crates/router/: Cargo.toml
crates/router/src/: candidate.rs  errors.rs  failover.rs  intake.rs  lib.rs  quota_gossip.rs  selection.rs
crates/router/tests/: l2_flow.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  openai.rs
crates/sdk-rust/: Cargo.toml
crates/sdk-rust/examples/: live_infer.rs
crates/sdk-rust/src/: candidate_table.rs  discovery.rs  errors.rs  lib.rs  p2p.rs  session.rs  wallet.rs
crates/staking/: Cargo.toml
crates/staking/src/: errors.rs  lib.rs  min_stake.rs  slashing.rs  validator_set.rs
crates/staking/tests/: lifecycle.rs
crates/treasury/: Cargo.toml
crates/treasury/src/: lib.rs
crates/validator/: Cargo.toml
crates/validator/src/: lib.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: dispute.rs  errors.rs  lib.rs  reexec.rs  selection.rs
crates/verifier/tests/: dispute_flow.rs
docker/: Dockerfile.node  docker-compose.dev.yml
docs-site/: CNAME  explorer.html  index.html  install.sh  seeds.json
docs-site/docs/: developers.html  getting-started.html  index.html  models.html  node-operators.html  privacy.html  seeders.html  tokenomics.html
genesis/mainnet/: genesis.toml
scripts/: setup-dev.sh
