[project]
name = "arknet-sdk"
version = "1.1.2"
description = "Python SDK for the arknet decentralized AI inference network."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
