[package]
name          = "arknet-chain"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "arknet L1 chain: blocks, state trie, transactions, fee market."
# Staking handlers get injected into apply_tx via a callback
# registered at node start-up (see `apply::set_stake_handler`) so
# this crate does NOT depend on arknet-staking — that would create a
# chain → staking → chain cycle.

[dependencies]
arknet-common      = { workspace = true }
arknet-crypto      = { workspace = true }
borsh              = { workspace = true }
serde              = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
rocksdb            = { workspace = true }
parking_lot        = { workspace = true }
sparse-merkle-tree = { workspace = true }
toml               = { workspace = true }
hex                = { workspace = true }

[dev-dependencies]
tempfile           = "3.10"
