[package]
name          = "arknet-common"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Shared types, errors, and utilities used across the arknet workspace."

[dependencies]
borsh        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
figment      = { workspace = true }
thiserror    = { workspace = true }
hex          = { workspace = true }
