[package]
name          = "arknet-compute"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "L2 compute role: accept inference jobs, run via inference engine, produce signed receipts."

[dependencies]
arknet-common        = { workspace = true }
arknet-crypto        = { workspace = true }
arknet-network       = { workspace = true }
arknet-inference     = { workspace = true }
arknet-model-manager = { workspace = true }
tokio                = { workspace = true }
thiserror            = { workspace = true }
tracing              = { workspace = true }
