[package]
name          = "arknet-governance"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "On-chain governance: proposals, voting, parameter changes, upgrades."

[dependencies]
arknet-common = { workspace = true }
arknet-chain  = { workspace = true }
borsh         = { workspace = true }
serde         = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
