[package]
name          = "arknet-network"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "P2P networking layer for arknet: libp2p transport, gossip, DHT, encrypted channels."

[dependencies]
arknet-common  = { workspace = true }
arknet-crypto  = { workspace = true }

tokio          = { workspace = true }
tokio-util     = { workspace = true }
futures        = { workspace = true }
async-trait    = { workspace = true }

borsh          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
hex            = { workspace = true }

tracing        = { workspace = true }
thiserror      = { workspace = true }
parking_lot    = { workspace = true }

libp2p         = { workspace = true }

[dev-dependencies]
tempfile       = "3.10"
tokio          = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = { workspace = true }
