[package]
name          = "arknet-receipts"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Inference receipt aggregation, Merkle batching, and L1 anchoring."

[dependencies]
arknet-common   = { workspace = true }
arknet-crypto   = { workspace = true }
arknet-chain    = { workspace = true }
borsh           = { workspace = true }
blake3          = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
tempfile        = "3.10"
