[package]
name          = "arknet-router"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "L2 router role: request intake, node selection, failover, receipt aggregation."

[dependencies]
arknet-common   = { workspace = true }
arknet-network  = { workspace = true }
arknet-crypto   = { workspace = true }
arknet-compute  = { workspace = true }

tokio           = { workspace = true }
tokio-stream    = "0.1"
thiserror       = { workspace = true }
tracing         = { workspace = true }
async-trait     = { workspace = true }
parking_lot     = { workspace = true }
borsh           = { workspace = true }
futures         = { workspace = true }
futures-util    = "0.3"
blake3          = { workspace = true }

[dev-dependencies]
rand            = { workspace = true }
tokio           = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream    = "0.1"
arknet-crypto   = { workspace = true }
