[package]
name          = "arknet-rpc"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "gRPC + REST + OpenAI-compatible API layer for arknet."

[dependencies]
arknet-common = { workspace = true }
arknet-chain  = { workspace = true }
axum          = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
tokio         = { workspace = true }
futures       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }
