[package]
name          = "arknet-sdk"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Public Rust SDK for building applications on arknet."

[dependencies]
arknet-common = { workspace = true }
arknet-crypto = { workspace = true }
tokio         = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
